Migrated from using TextComponentBuilder to ComponentBuilder Removed TextComponentBuilder